# uiautomator2-async

./: .flake8  ChangeLog  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: pythonapp.yml
examples/: device.py
tools/: proxy.sh
uiautomator2Async/: __init__.py  cfg.py  client.py  exception.py  rpc.py  selector.py  swipe.py  type.py  utils.py  watch.py  xpath.py
