[metadata]
name = cc12703_uiautomator2_async
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Python Wrapper for Google Android UiAutomator2 test tool
license = MIT
home-page = https://github.com/cc12703/uiautomator2-async
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
    uiautomator2Async


